# neflow

./: .gitignore  .gitmodules
code/: .clang-format  CMakeLists.txt  TODO.md  settings.json
code/docs/: ScreenDesign.drawio  TempSystem.drawio
code/include/: debounce.h  nf_common.h  nf_config.h  nf_max31855.h  nf_memory.h  nf_menu.h  nf_profile.h  nf_system.h  nf_tempsys.h  ssd1306.h
code/include/nf_menu/: nf_calibrate_menu_screen.h  nf_calibration_screen.h  nf_config_edit_screen.h  nf_graph.h  nf_graph_font.h  nf_main_menu.h  nf_main_menu_screen.h  nf_menu_common.h  nf_profile_edit_screen.h  nf_profile_run_screen.h  nf_profiles_screen.h  nf_test_menu_screen.h
code/libs/: CMakeLists.txt
code/src/: CMakeLists.txt  debounce.c  main.c  nf_config.c  nf_max31855.c  nf_memory.c  nf_menu.c  nf_profile.c  nf_tempsys.c  ssd1306.c
code/src/nf_menu/: nf_calibrate_menu_screen.c  nf_calibration_screen.c  nf_config_edit_screen.c  nf_graph_font.c  nf_main_menu.c  nf_main_menu_screen.c  nf_menu_common.c  nf_profile_edit_screen.c  nf_profile_run_screen.c  nf_profiles_screen.c  nf_test_menu_screen.c
pcb/: custom_memory.kicad_sym  custom_power.kicad_sym  flash_psram.kicad_sch  fp-lib-table  io.kicad_sch  neflow.kicad_pcb  neflow.kicad_pro  neflow.kicad_sch  power_supply.kicad_sch  report.txt  rp2350_core.kicad_sch  sd_card.kicad_sch  sym-lib-table  temp_control.kicad_sch
pcb/ACDCLibrary.pretty/: Converter_ACDC_HiLink_HLK-PMxx.kicad_mod
pcb/Branding.pretty/: PT_BloodLogo.kicad_mod  PT_BloodLogoSmall.kicad_mod  PotatoBloodPCBLogo.kicad_mod
pcb/library.pretty/: 1333870.kicad_mod
pcb/silicone_btn/silicone_btn.pretty/: BUTTON_SILICON.kicad_mod
